--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node ./server.js",
     "pre-build": "npm run clean",
     "build": "parcel build ./src/index.html --no-source-maps",
-    "clean": "rm -r dist .cache"
+    "clean": "rm -rf dist .cache"
   },
   "engines": {
     "node": "12.13.0"
