--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
   "homepage": "https://github.com/Kanosakl/urlshortener#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
     "cookie-session": "^1.4.0",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
