--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-fetch": "^2.6.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
