--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cookie-session": "^1.4.0",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
+    "is-valid-http-url": "^1.0.3",
     "node-fetch": "^2.6.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
